New Changes-Still Not 100%

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	<div class="album1Content">
 		Disney Honeymoon: November 2011
 		<ul>
-			<li><img src="images/honeymoon1.jpg" alt=""></li>
-			<li><img src="images/honeymoon4.jpg" alt=""></li>
-			<li><img src="images/honeymoon3.jpg" alt=""></li>
-			<li><img src="images/honeymoon2.jpg" alt=""></li>
+			<li><img class="moon1" src="images/honeymoon1.jpg" alt=""></li>
+			<li><img class="moon4" src="images/honeymoon4.jpg" alt=""></li>
+			<li><img class="moon3" src="images/honeymoon3.jpg" alt=""></li>
+			<li><img class="moon2" src="images/honeymoon2.jpg" alt=""></li>
 			
 		</ul>
 	</div>
@@ -38,10 +38,10 @@
 	<div class="album2Content">
 		Buffalo, NY & Canada Trip: January 2014
 		<ul>
-			<li><img src="images/ny4.jpg" alt=""></li>
-			<li><img src="images/ny2.jpg" alt=""></li>
-			<li><img src="images/ny3.jpg" alt=""></li>
-			<li><img src="images/ny1.jpg" alt=""></li>
+			<li><img class="ny4" src="images/ny4.jpg" alt=""></li>
+			<li><img class="ny2" src="images/ny2.jpg" alt=""></li>
+			<li><img class="ny3" src="images/ny3.jpg" alt=""></li>
+			<li><img class="ny1" src="images/ny1.jpg" alt=""></li>
 			
 		</ul>
 	</div>
@@ -49,10 +49,10 @@
 	<div class="album3Content">
 		Disney Brides Meetup: February 2013 
 		<ul>
-			<li><img src="images/brides1.jpg" alt=""></li>
-			<li><img src="images/brides4.jpg" alt=""></li>
-			<li><img src="images/brides3.jpg" alt=""></li>
-			<li><img src="images/brides2.jpg" alt=""></li>
+			<li><img class="brides1" src="images/brides1.jpg" alt=""></li>
+			<li><img class="brides4" src="images/brides4.jpg" alt=""></li>
+			<li><img class="brides3" src="images/brides3.jpg" alt=""></li>
+			<li><img class="brides2" src="images/brides2.jpg" alt=""></li>
 			
 		</ul>
 	</div>
