--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="albums">
 
 	<div class="album1Content">
-		Disney Honeymoon: November 2011
+		Disney Honeymoon: November 2011!
 		<ul>
 			<li><img class="moon1" src="images/honeymoon1.jpg" alt=""></li>
 			<li><img class="moon4" src="images/honeymoon4.jpg" alt=""></li>
@@ -36,7 +36,7 @@
 	</div>
 	
 	<div class="album2Content">
-		Buffalo, NY & Canada Trip: January 2014
+		Buffalo, NY & Canada Trip: January 2014!
 		<ul>
 			<li><img class="ny4" src="images/ny4.jpg" alt=""></li>
 			<li><img class="ny2" src="images/ny2.jpg" alt=""></li>
@@ -47,7 +47,7 @@
 	</div>
 
 	<div class="album3Content">
-		Disney Brides Meetup: February 2013 
+		Disney Brides Meetup: February 2013!
 		<ul>
 			<li><img class="brides1" src="images/brides1.jpg" alt=""></li>
 			<li><img class="brides4" src="images/brides4.jpg" alt=""></li>
